tests/errors/existential/invalid-assign.fil
comp Foo[#W]<G:1>() -> () {
    exists #W = 10;
}